Add rel="noopener noreferrer" for target="_blank"
Opened tabs/windows otherwise get access to the window.opener object and
could do potentially nasty stuff.

More info: https://www.jitbit.com/alexblog/256-targetblank---the-most-underestimated-vulnerability-ever/

--- a/src/lib/assets/contact.html
+++ b/src/lib/assets/contact.html
@@ -1,2 +1,3 @@
-Please consult <a href='https://en.wikipedia.org/wiki/WHOIS' target='_blank' class='underline'>WHOIS</a> of this domain
+Please consult <a href='https://en.wikipedia.org/wiki/WHOIS' target='_blank' rel="noopener noreferrer"
+	class='underline'>WHOIS</a> of this domain
 for contact information.
